# hotel-receptionist

./: hotel.txt  main.py  pyproject.toml  readme.md
